--- a/index.html
+++ b/index.html
@@ -562,7 +562,7 @@
                   <img src="assets/img/speakers/rangasayee.jpg" alt="Dr Rangasayee">
                 </div>
                          <h4>Inclusion of Persons with Hearing Loss </h4>
-                <p>Prof. Rangasayee</p>
+                <p>Prof.R  Rangasayee</p>
               </div>
             </div>
 
@@ -646,6 +646,19 @@
               </div>
             </div>
           
+
+          <div class="row schedule-item">
+                <div class="col-md-2"><time>Session 3</time></div>
+                <div class="col-md-10">
+                  <div class="speaker">
+                  <img src="assets/img/speakers/speaker.jpg" alt="Carol Westby">
+                </div>
+                    <h4>Screen Time Considerations for Young Children: Concerns and Engagements</h4>
+                  <p>Carol Westby</p>
+                </div>
+              </div>
+
+
             <div class="row schedule-item">
               <div class="col-md-2"><time></time></div>
               <div class="col-md-10">
@@ -678,6 +691,11 @@
                   <p>Ms. Sonal Chitnis</p>
                 </div>
               </div>
+
+
+ 
+
+
           </div>
           <!-- End Schdule Day 3 -->
 
