--- a/index.html
+++ b/index.html
@@ -834,7 +834,7 @@
   <tbody>
     <tr>
       <td>Last date of submission of abstract</td>
-      <td>30 July 2022</td>
+      <td>10th August 2022</td>
     </tr>
     <tr>
      
