--- a/index.html
+++ b/index.html
@@ -839,12 +839,12 @@
     <tr>
      
       <td>Acceptance and Invitation to submit manuscripts</td>
-      <td>19 August 2022</td>
+      <td>22nd August 2022</td>
      
     </tr>
     <tr>
        <td>Last date for the receipt of full length manuscript</td>
-       <td>31 August 2022</td>
+       <td>31st August 2022</td>
     </tr>
   </tbody>
 </table>
