--- a/index.html
+++ b/index.html
@@ -834,17 +834,17 @@
   <tbody>
     <tr>
       <td>Last date of submission of abstract</td>
-      <td>10th August 2022</td>
+      <td>10 August 2022</td>
     </tr>
     <tr>
      
       <td>Acceptance and Invitation to submit manuscripts</td>
-      <td>22nd August 2022</td>
+      <td>22 August 2022</td>
      
     </tr>
     <tr>
        <td>Last date for the receipt of full length manuscript</td>
-       <td>31st August 2022</td>
+       <td>31 August 2022</td>
     </tr>
   </tbody>
 </table>
