--- a/index.html
+++ b/index.html
@@ -853,7 +853,7 @@
   <tbody>
     <tr>
       <td>Last date of submission of abstract</td>
-      <td>10 August 2022</td>
+      <td> Closed </td>
     </tr>
     <tr>
      
@@ -870,7 +870,7 @@
 
 
        <div class="text-center">
-        <a href="https://docs.google.com/forms/d/e/1FAIpQLSe6r8qj4Xn_pbSWgFCRrKes2hGwdrjhpmhTDFaC0XWmDr_WPw/viewform" target="_blank"><button type="button" class="btn ">Submit your paper</button></a>
+        <a href="#" target=""><button type="button" class="btn ">Submit your paper</button></a>
       </div>
        
     </div>
