--- a/day2.html
+++ b/day2.html
@@ -30,7 +30,7 @@
     </center>
     <center>
         <h3 style="color: #2f3138"> Poster 2</h3>
-        <img src="poster/day2/ICCAP_Poster_A002.png" width="90%" >
+        <img src="poster/day2/ICCAP_Poster_A002.png" width="90%" >å
         </img>
     </center>
     <center>
